# allprs

./: .pre-commit-config.yaml  README.md  blah  pyproject.toml
.github/workflows/: mypy.yml  release.yml
src/allprs/: __init__.py  config.py  main.py  utils.py
